# clinicadl-pythae

./: README.md  pyproject.toml
.github/workflows/: lint.yml
clinithae/cli/: train_cli.py
clinithae/network/models/: ae.py
clinithae/trainer/: pythae_train.py
