[tool.poetry]
name = "clinicadl-pythae"
version = "0.0.1"
description = "Plugin to use clinicadl with pythae"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica-user@inria.fr>"]
readme = "README.md"
homepage = "https://clinicadl.readthedocs.io/en/latest/clinicadl-pythae"
repository = "https://github.com/aramis-lab/clinicadl-pythae.git"
documentation =  "https://clinicadl.readthedocs.io/en/latest/clinicadl-pythae"
keywords = [
    "bids",
    "image processing",
    "deep learning",
    "neuroimaging",
    "neuroscience",
    "VAE"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
clinicadl = "^1.4.0"
pythae = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
clinicadl-pythae = "clinicadl-pythae.cmdline:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
force-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | docs
  | README.md
  | MANIFEST.in
  | LICENSE.txt
  | clinicadl/VERSION
)/
'''
exclude = '''
/(
    README.md
  | MANIFEST.in
  | LICENSE.txt
  | clinicadl/VERSION
)/
'''

[tool.isort]
profile = "black"
